[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Value_Iteration"
version = "1.0.0"
maintainers = [
  { name="Harry Ellingham", email="h.ellingham@lancaster.ac.uk" },
]
authors = [
  { name="Harry Ellingham", email="h.ellingham@lancaster.ac.uk"},
]
description = "null package"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", "matplotlib",
]

[project.urls]
homepage = "https://fakeurl.html"